--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="style.css">
+
     <title>Állásinterjú</title>
 </head>
 <body>
     <h1>Állásinterjú JavaScript</h1>
+
+    <div class="buttons">
+        <button data-info="first button" class="js-button button is-primary">Click Me!</button>
+        <button data-info="second button" class="js-button button second">Click Me!</button>
+        <button data-info="yellow button" class="js-button button third">Click Me!</button>
+    </div>
+
+    
 
 <script src="app.js"></script>
 </body>
