--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
     <h1>Állásinterjú JavaScript</h1>
 
     <div class="buttons">
-        <button data-info="first button" class="js-button button is-primary">Click Me!</button>
-        <button data-info="second button" class="js-button button second">Click Me!</button>
-        <button data-info="yellow button" class="js-button button third">Click Me!</button>
-    </div>
+        <button data-info="first button" class="js-color button is-primary">
+          Click Me!
+        </button>
+        <button data-info="second button" class="js-alert button is-info">
+          Click Me!
+        </button>
+        <button data-info="yellow button" class="js-alert button is-warning">
+          Click Me!
+        </button>
+      </div>
+      
+      <div class="message is-primary">
+        <div class="js-message message-body">
+          Here goes the button info!
+        </div>
+      </div>
 
     
 
